@@ -180,9 +180,9 @@ public class CompetitionStandingsByGroupListAdapter
 				holder.headerContainer.setVisibility(View.GONE);
 			}
 				
-			String teamGPAsString = new Integer(element.getMatches()).toString();
-			String teamPlusMinusAsString = new Integer(element.getGoalsForMinusGoalsAgainst()).toString();
-			String teamPointsAsString = new Integer(element.getPoints()).toString();
+			String teamGPAsString = Integer.valueOf(element.getMatches()).toString();
+			String teamPlusMinusAsString = Integer.valueOf(element.getGoalsForMinusGoalsAgainst()).toString();
+			String teamPointsAsString = Integer.valueOf(element.getPoints()).toString();
 
 			holder.teamGP.setText(teamGPAsString);
 			holder.teamPlusMinus.setText(teamPlusMinusAsString);
